--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div id="home" class="page active">
         <header>
             <h1>Lotto Numbers</h1>
+            <h3>By: Jervin Francisco</h3>
         </header>
         <section class="main">
             <p class="formBox">
@@ -27,6 +28,7 @@
     <div id="list" class="page">
         <header>
             <h1>Lotto Numbers</h1>
+            <h3>By: Jervin Francisco</h3>
         </header>
         <section class="main">
             <ul class="num_list">
