--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <section class="main">
             <p class="formBox">
                 <label for="digits">Number of Digits</label>
-                <input id="digits" type="number" max="10" min="1" placeholder="6" class="sm" />
+                <input id="digits" type="number" max="10" min="1" placeholder="1 to 10" class="sm" />
             </p>
             <p class="formBox">
                 <label for="max">Range</label>
-                <span>1 to </span><input id="max" type="number" min="2" max="99" placeholder="49" class="sm" />
+                <span>1 to </span><input id="max" type="number" min="2" max="1 to 99" placeholder="49" class="sm" />
             </p>
             <p class="formBox buttons">
                 <button id="btnSend">Generate Numbers</button>
