--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </p>
             <p class="formBox">
                 <label for="max">Range</label>
-                <span>1 to </span><input id="max" type="number" min="2" max="1 to 99" placeholder="49" class="sm" />
+                <span>1 to </span><input id="max" type="number" min="2" max="99" placeholder="1 to 99" class="sm" />
             </p>
             <p class="formBox buttons">
                 <button id="btnSend">Generate Numbers</button>
